k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector: { matchLabels: { app: web } }
  template:
    metadata: { labels: { app: web } }
    spec:
      containers:
        - name: web
          image: ghcr.io/<twoje-org>/<twoje-repo>:latest
          ports: [ { containerPort: 80 } ]
          readinessProbe: { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 3 }
          livenessProbe:  { httpGet: { path: "/", port: 80 }, initialDelaySeconds: 10 }
